--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -10,6 +10,10 @@ app_login:
   path: /login
   controller: App\Controller\LoginController::index
 
+app_logout:
+  path: /logout
+  methods: GET
+
 categoria:
   path: /categoria
   controller: App\Controller\CategoriaController::index
